# fall-detection-care-facility-yolov8

./: .dockerignore.dev  .gitignore  Dockerfile  Dockerfile.dev  README-DEV.md  README-DOCKER.md  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
accounts/: urls.py  views.py
accounts/templates/accounts/: login.html  logout.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  password_reset_subject.txt
backend/: settings.py  urls.py
detection/: forms.py  models.py  services.py  tracking.py  urls.py  views.py
detection/bytetrack/: README.md
detection/bytetrack/yolox/evaluators/: mot_evaluator.py
detection/bytetrack/yolox/tracker/: byte_tracker.py  matching.py
detection/migrations/: 0001_initial.py  0002_fallalert_metadata_fallalert_video_clip_and_more.py  0003_fallalert_accuracy_marked_at_and_more.py  0004_fallalert_fall_state_fallalert_time_on_ground.py
detection/templates/detection/: alerts_list.html  dashboard.html  live_detection.html  test_detection.html
scripts/: dev.sh
templates/: base.html
